# MarksAgent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  README_old.md  api_gateway.py  dashboard.py  dashboard_temp.db  docker-compose.yml  marks_agent.py  requirements.txt  simulate_ecosystem.py  students_profiles.db  test_agent.py  test_api.py  test_marks_agent.py  test_tutor_llm.py  tutor_agent.py
.agents/rules/: marks_agent_core_logic.md
.vscode_old/: settings.json
backend/api-gateway/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  api_gateway.py  requirements.txt
backend/marks_agent/: .gitlab-ci.yml  MarksSchema.py  Settings.py  StudentPayload.py  __init__.py  pyproject.toml
backend/marks_agent_service/: .gitlab-ci.yml  Dockerfile  marks_agent.py  requirements.txt
backend/tutorial_agent_new/: Dockerfile  requirements.txt  tutor_agent.py
frontend/: Dockerfile
frontend/src/app/: page.tsx
